fix:integration bugs